<?php
declare(strict_types=1);

namespace N1215\Http\Router\Exception;

final class MethodNotAllowedException extends RoutingException
{
}
