@startuml

package N1215\Http\Router {

    abstract class RoutingException {
    }

    class RouteNotFoundException {
    }

    class MethodNotAllowedException {
    }

    interface RoutingErrorResponderInterface {
        + supports(RoutingException $exception): bool
        + respond(RoutingException $exception, ServerRequestInterface $request): ResponseInterface
    }
    note bottom of RoutingErrorResponderInterface: Converts routing exception to PSR-7 response

    RoutingException --> RoutingErrorResponderInterface: input
    Psr\Http\Message.ServerRequestInterface --> RoutingErrorResponderInterface: input
    RoutingErrorResponderInterface --> Psr\Http\Message.ResponseInterface: output

    RouteNotFoundException --|> RoutingException: extends
    MethodNotAllowedException --|> RoutingException: extends
}

namespace Psr\Http\Message {
    interface ServerRequestInterface
    interface ResponseInterface
}

@enduml